tests/common/snapshots/mbr__common__tests__mbr.rs-7-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 8388608
  name: mbr
  confidence: 128
  description: "DOS Master Boot Record, partition: Linux, image size: 8388608 bytes"
  always_display: true
  extraction_declined: false
