tests/common/snapshots/mbr__common__tests__mbr.rs-7-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 8388608
  success: true
  extractor: mbr_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
