tests/common/snapshots/mbr__common__tests__mbr.rs:7:5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 5120
  name: mbr
  confidence: 128
  description: "DOS Master Boot Record, partition: Linux, image size: 5120 bytes"
  always_display: true
  extraction_declined: false
